--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span>U</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah kmu Aceel ku yang ku sayang!!</span>
+        <span>Aku ada hadiah untuk kmu Aceel ku yang ku sayang!!</span>
     </div>
     <div class="button">
         <button>
